--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.11"
   },
