--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.11"
   },
