updated voting pop up

--- a/package.json
+++ b/package.json
@@ -19,16 +19,24 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^7.11.1",
+    "@react-hookz/web": "^24.0.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.12",
     "firebase": "^10.12.2",
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.400.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-spring": "^9.7.4",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.11"
