--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.0",
     "react-scroll-parallax": "^3.4.5",
