--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.13.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.0",
     "react-scroll-parallax": "^3.4.5",
