--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "animejs": "^3.2.2",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.12",
     "firebase": "^10.12.2",
