--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.0",
     "react-scroll-parallax": "^3.4.5",
@@ -45,6 +46,8 @@
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
+    "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
