--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-loader-spinner": "^6.1.6",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.24.0",
     "react-scroll-parallax": "^3.4.5",
     "react-spring": "^9.7.4",
